Prevents control bar collapse on touch devices

--- a/src/plugins/clipBar/styles/_main.scss
+++ b/src/plugins/clipBar/styles/_main.scss
@@ -62,9 +62,11 @@
     }
   }
 
-  &.vjs-has-started.vjs-user-inactive.vjs-playing
-    .vjs-control-bar
-    .lvp-clipbar {
-    opacity: 0;
+  @media (hover: hover) {
+    &.vjs-has-started.vjs-user-inactive.vjs-playing
+      .vjs-control-bar
+      .lvp-clipbar {
+      opacity: 0;
+    }
   }
 }
